# embedded-rust-devcontainer

./: Cargo.toml  readme.md
.cargo/: config.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
