[package]
name = "em-blinky"
version = "0.1.1"
edition = "2021"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"]  }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", version = "0.6.0", features = [
  "defmt", 
  # "unstable-pac", 
  "time-driver", "critical-section-impl", "rp235xa", "binary-info"
  ] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
